cmake_minimum_required(VERSION 3.26)
project(shujujiegou)

set(CMAKE_CXX_STANDARD 11)

add_executable(shujujiegou main.cpp)
add_executable(11-1 11-1.cpp)
add_executable(shiyan shiyan.c)
add_executable(11-2 11-2.cpp)
add_executable(11-3 11-3.cpp)
add_executable(1-1 1-1.cpp)
add_executable(shicuo shicuo.cpp)
add_executable(11-1chao 11-1chao.cpp)
add_executable(11-2chao 11-2chao.cpp)
add_executable(11-3chao 11-3chao.cpp)
add_executable(2-1 2-1.cpp)
add_executable(2-2 2-2.cpp)
add_executable(2-3 2-3.cpp)
add_executable(minpalindrome minpalindrome.cpp)
add_executable(3-1 3-1.cpp)
add_executable(3-2 3-2.cpp)
add_executable(3-3 3-3.cpp)
add_executable(3-4 4-1.cpp)
add_executable(4-1 4-2.cpp)
add_executable(4-2 4-3.cpp)
add_executable(4-3 4-4.cpp)
add_executable(4-4 4-4.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(16 16.cpp)
add_executable(17 17.cpp)
add_executable(18 18.cpp)
add_executable(19 19.cpp)
add_executable(20 20.cpp)
add_executable(7-3 7-3.cpp)
add_executable(7-2 7-2.cpp)
add_executable(7-1 7-1.cpp)
add_executable(22 22.cpp)
add_executable(21 21.cpp)
add_executable(7-4 7-4.cpp)
add_executable(25 25.cpp)
add_executable(26 26.cpp)
add_executable(30 30.cpp)
add_executable(29 29.cpp)
add_executable(28 28.cpp)
add_executable(27 27.cpp)
add_executable(31 31.cpp)
add_executable(32 32.cpp)
add_executable(33 33.cpp)
add_executable(34 34.cpp)
add_executable(35 35.cpp)
add_executable(36 36.cpp)
add_executable(12-3 12-3.cpp)
add_executable(12-2 12-2.cpp)
add_executable(12-1 12-1.cpp)
add_executable(12-2ziji 12-2ziji.cpp)
add_executable(14-3 14-3.cpp)
add_executable(14-2 14-2.cpp)
add_executable(14-1 14-1.cpp)
add_executable(13-3 13-3.cpp)
add_executable(13-2 13-2.cpp)
add_executable(13-1 13-1.cpp)
add_executable(15-2 15-2.cpp)
add_executable(dazuoye-3 dazuoye-3.cpp)
add_executable(dazuoye-2 dazuoye-2.cpp)
add_executable(dazuoye-1 dazuoye-1.cpp)
add_executable(shicuo1 shicuo1.c)
add_executable(zuoye1 zuoye1.cpp)
add_executable(zuoye2 zuoye2.cpp)
add_executable(zuoye3 zuoye3.cpp)
